<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/canvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="#F88D8D8D">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="353dp"
        android:layout_height="524dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/close_settings"
            android:layout_width="138dp"
            android:layout_height="49dp"
            android:layout_marginBottom="35dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/toggle_hard_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_mute" />

        <TextView
            android:id="@+id/hard_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/hard_mode"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_hard_mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toggle_hard_mode" />

        <TextView
            android:id="@+id/mute_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_mute"
            app:layout_constraintStart_toStartOf="@+id/hard_mode_text"
            app:layout_constraintTop_toTopOf="@+id/toggle_mute"
            app:layout_constraintVertical_bias="0.098" />

        <TextView
            android:id="@+id/background_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/background_title"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/mute_text"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/toggle_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_garden" />

        <TextView
            android:id="@+id/hard_mode_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/hard_mode_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_hard_mode" />

        <ImageView
            android:id="@+id/set_bedroom"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_title"
            app:srcCompat="@android:color/holo_orange_light" />

        <ImageView
            android:id="@+id/set_living_room"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@+id/set_garden"
            app:layout_constraintStart_toEndOf="@+id/set_bedroom"
            app:layout_constraintTop_toTopOf="@+id/set_bedroom"
            app:srcCompat="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/set_garden"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/set_living_room"
            app:srcCompat="@android:color/holo_blue_bright" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>