<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9FFFFFF"
    tools:context=".PetGame.PetGameActivity">

    <TextView
        android:id="@+id/pet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Name"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_energy" />

    <Button
        android:id="@+id/back_to_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/play_training_game"
        app:layout_constraintEnd_toStartOf="@+id/play_training_game"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/account_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Account Money"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/open_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/open_shop"
        app:layout_constraintEnd_toEndOf="@+id/account_money"
        app:layout_constraintTop_toBottomOf="@+id/account_money" />

    <Button
        android:id="@+id/play_training_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/play_training_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/play_memory_tile_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_memory_tile_game"
        app:layout_constraintBottom_toBottomOf="@+id/play_training_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/play_training_game" />

    <TextView
        android:id="@+id/energy_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="E: "
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/health_key" />

    <TextView
        android:id="@+id/pet_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Energy"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/energy_key"
        app:layout_constraintTop_toTopOf="@+id/energy_key" />

    <TextView
        android:id="@+id/pet_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Health"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/health_key"
        app:layout_constraintTop_toTopOf="@+id/health_key" />

    <TextView
        android:id="@+id/health_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="H: "
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_age" />

    <TextView
        android:id="@+id/pet_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Age"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age_tail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/pet_age"
        app:layout_constraintTop_toTopOf="@+id/pet_age" />

    <ImageView
        android:id="@+id/pet"
        android:layout_width="146dp"
        android:layout_height="146dp"
        app:layout_constraintBottom_toTopOf="@+id/play_training_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_name"
        app:layout_constraintVertical_bias="0.705"
        app:srcCompat="@drawable/meow_black_happy" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_shop"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/candy"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energy_key"
        app:srcCompat="@drawable/candy" />

    <TextView
        android:id="@+id/num_candy"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:text="num"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/candy"
        app:layout_constraintTop_toTopOf="@+id/candy" />

    <TextView
        android:id="@+id/collect_egg_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="Easter Egg Collected"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/pet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/collect_candy"
        android:layout_width="75dp"
        android:layout_height="74dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toTopOf="@+id/collect_egg_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/candy" />

</androidx.constraintlayout.widget.ConstraintLayout>